Display hardcoded name with correct styling

--- a/src/pages/profile/Name.css
+++ b/src/pages/profile/Name.css
@@ -6,3 +6,10 @@
 .nameBorder {
     min-width: 459px;
 }
+
+.button {
+    border: solid;
+    border-radius: 100px;
+    border-width: 2px;
+  }
+  
