created icon component, that shows logo and label, positioning still WIP

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,4 +1,4 @@
 div.profilePage {
-  background: url(./profile-background.png);
+  background: url("./profile-background.png");
   background-size: cover;
 }
